<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">SecureShareUILibrary</string>
    <string name="connect_account">Connect Account</string>
    <string name="select_account">Select Account</string>
    <string name="accounts_connected">Connected</string>
    <string name="accounts_available">Available</string>
    <string name="account_logo_desc">Account Logo</string>
    <string name="account_none_found">No Accounts Found</string>
    <string name="dialog_account_message">Disconnect this Account?</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="exception">Exception: %1$s</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_storymaker">Sign in to StoryMaker?</string>
    <string name="inavalid_credentials">*Invalid Login Credentials</string>
    <string name="ssh_upload_in_progress">SSH upload in progress...</string>
    
    <string name="lbl_Yes">Yes</string>
    <string name="lbl_Cancel">Cancel</string>
	<string name="lbl_off">Off</string>
	<string name="lbl_on">On</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_cancelled">Canceled</string>
    <string name="lbl_success">Success</string>
    <string name="lbl_continue">Continue</string>
	
	<string name="archive_title">Email Confimation</string>
	<string name="archive_message">Please confirm your email and return to connect your Archive account.</string>
	<string name="archive_license_by" translatable="false"><a href="https://creativecommons.org/licenses/by/4.0/">Attribution</a></string>
	<string name="archive_license_bysa" translatable="false"><a href="https://creativecommons.org/licenses/by-sa/4.0/">Attribution-ShareAlike</a></string>
	<string name="archive_license_byncnd" translatable="false"><a href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Attribution-NonCommercial-NoDerivs</a></string>
	<string name="upload_to_internet_archive">Upload to Internet Archive</string>
	<string name="upload_securely_via_tor">Upload Securely via Tor</string>
	<string name="use_tor_to_upload_securely_and_anonymously_">Use Tor to upload securely and anonymously.</string>
	<string name="publish_to_storymaker">Publish to StoryMaker</string>
	<string name="login_to_storymaker_cc_to_publish_">Login to StoryMaker.org to publish.</string>
    <string name="invalid_file_format">Invalid file format.</string>
    <string name="youtube_uploading">YouTube uploading...</string>
    <string name="google_play_services_not_avail">"Google Play Services not Available"</string>
    <string name="insufficient_permissions">Insuffiecent Permissions</string>
    <string name="connect_your_google_account_to_device">Connect your Google account to this device.</string>
    <string name="remote_path">Remote Path (optional)</string>
    <string name="server_nickname">Server Nickname</string>
    <string name="hostname_address">Hostname or IP Address</string>
</resources>
